# mycobot_kinematics

./: CMakeLists.txt  README.md  mycobot_kinematics_description.xml  package.xml
include/mycobot_kinematics/: mycobot_kin.h  mycobot_kinematics_plugin.h
src/: main.cpp  mycobot_kin.cpp  mycobot_kinematics_plugin.cpp  ur_kin.cpp
